tools/tests/ui/fail/l1040.cnf
// Test file for error code: L1040
// Expected error: Missing State character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
